--- a/src/main/resources/HeuristicConf.yml
+++ b/src/main/resources/HeuristicConf.yml
@@ -7,3 +7,12 @@ heuristics:
     params:
       gc_severity_A_threshold: 0.08, 0.10, 0.15, 0.20
       gc_severity_D_threshold: 0.05, 0.04, 0.03, 0.01
+  -
+    name: Spark Executors
+    applicationtype: spark
+    classname: com.ctyun.lannister.spark.heuristics.ExecutorsHeuristic
+    viewname:
+    params:
+      max_to_median_ratio_severity_thresholds: 1.334, 1.778, 3.162, 10
+      ignore_max_bytes_less_than_threshold: 100 MB
+      ignore_max_millis_less_than_threshold: 300000
