--- a/src/main/resources/HeuristicConf.yml
+++ b/src/main/resources/HeuristicConf.yml
@@ -16,3 +16,18 @@ heuristics:
       max_to_median_ratio_severity_thresholds: 1.334, 1.778, 3.162, 10
       ignore_max_bytes_less_than_threshold: 100 MB
       ignore_max_millis_less_than_threshold: 300000
+  -
+    name: Spark Configuration
+    applicationtype: spark
+    classname: com.ctyun.lannister.spark.heuristics.ConfigurationHeuristic
+    viewname:
+    params:
+      spark_overheadMemory_thresholds_key: 2, 4, 6, 8
+  -
+    name: Spark Configuration
+    applicationtype: spark
+    classname: com.ctyun.lannister.spark.heuristics.JobsHeuristic
+    viewname:
+    params:
+      job_failure_rate_severity_thresholds: 0.1, 0.3, 0.5, 0.5
+      job_task_failure_rate_severity_thresholds: 0.1, 0.3, 0.5, 0.5
