--- a/src/main/resources/lannister.properties
+++ b/src/main/resources/lannister.properties
@@ -1,4 +1,5 @@
 lannister.executor.num=10
 lannister.analysis.fetch.interval=30000
+lannister.initialFetchStartTime=0
 lannister.keytab.user=
 lannister.keytab.location=
