--- a/src/main/resources/HeuristicConf.yml
+++ b/src/main/resources/HeuristicConf.yml
@@ -2,7 +2,7 @@ heuristics:
   -
     name: Spark Configuration
     applicationtype: spark
-    classname: com.ctyun.lannister.spark.heuristics.ConfigurationHeuristic
+    classname: com.ctyun.lannister.core.spark.heuristics.ConfigurationHeuristic
     viewname:
     params:
       spark_overheadMemory_thresholds_key: 2, 4, 6, 8
@@ -12,7 +12,7 @@ heuristics:
   -
     name: Spark Job
     applicationtype: spark
-    classname: com.ctyun.lannister.spark.heuristics.JobsHeuristic
+    classname: com.ctyun.lannister.core.spark.heuristics.JobsHeuristic
     viewname:
     params:
       job_failure_rate_severity_thresholds: 0.1, 0.3, 0.5, 0.5
@@ -20,7 +20,7 @@ heuristics:
   -
     name: Spark Executor Gc
     applicationtype: spark
-    classname: com.ctyun.lannister.spark.heuristics.ExecutorGcHeuristic
+    classname: com.ctyun.lannister.core.spark.heuristics.ExecutorGcHeuristic
     viewname:
     params:
       gc_severity_A_threshold: 0.08, 0.10, 0.15, 0.20
@@ -28,7 +28,7 @@ heuristics:
   -
     name: Spark Executors
     applicationtype: spark
-    classname: com.ctyun.lannister.spark.heuristics.ExecutorsHeuristic
+    classname: com.ctyun.lannister.core.spark.heuristics.ExecutorsHeuristic
     viewname:
     params:
       max_to_median_severity_thresholds: 1.334, 1.778, 3.162, 10
@@ -37,7 +37,7 @@ heuristics:
   -
     name: Spark Stages
     applicationtype: spark
-    classname: com.ctyun.lannister.spark.heuristics.StagesHeuristic
+    classname: com.ctyun.lannister.core.spark.heuristics.StagesHeuristic
     viewname:
     params:
       stage_failure_rate_severity_thresholds: 0.2, 0.4, 0.6, 0.8
